[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/PartitionColoringEdgeWindowPopup.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PartitionColoringEdgeWindowPopup" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.5
margin_top = -250.0
margin_right = 196.5
margin_bottom = 250.0
window_title = "Partition ID Coloring"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 368.0
margin_bottom = 475.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 343.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 21.0
text = "Assign or change colors of Partition IDs."
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 343.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 25.0
margin_right = 343.0
margin_bottom = 188.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 156.0
custom_constants/hseparation = 10
columns = 4

[node name="Partition ID" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Partition ID"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 83.0
margin_right = 190.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Color" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Color"
align = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 107.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 200.0
margin_right = 248.0
margin_bottom = 24.0

[node name="AlphaButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 24.0
text = "Alpha"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 258.0
margin_right = 329.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 19.0
text = "Visible"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer2"]
margin_left = 47.0
margin_right = 71.0
margin_bottom = 24.0
pressed = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 156.0
mouse_filter = 2
custom_constants/margin_top = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
margin_top = 25.0
margin_right = 329.0
margin_bottom = 149.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 329.0
size_flags_horizontal = 3
columns = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 343.0
margin_bottom = 258.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 27.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_right = 162.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -7.0
margin_right = 67.5
margin_bottom = 7.0
custom_styles/normal = SubResource( 1 )
text = "Edges between Blocks"
valign = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 166.0
margin_right = 329.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 343.0
margin_bottom = 450.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 40.0
margin_right = 333.0
margin_bottom = 188.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 323.0
margin_bottom = 64.0
size_flags_vertical = 3
alignment = 1

[node name="RandomButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 101.0
margin_right = 221.0
margin_bottom = 64.0
size_flags_vertical = 3
text = "Random Coloring"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 323.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 159.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Apply"

[node name="DontApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 163.0
margin_right = 323.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Don't Apply"

[node name="AlphaValuePopup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.5
margin_top = -120.0
margin_right = 196.5
margin_bottom = -20.0

[node name="ColorRect" type="ColorRect" parent="AlphaValuePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="MarginContainer" type="MarginContainer" parent="AlphaValuePopup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="AlphaValuePopup/ColorRect/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 388.0
margin_bottom = 95.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer"]
margin_left = 25.0
margin_right = 383.0
margin_bottom = 16.0
size_flags_horizontal = 10
custom_constants/separation = 10

[node name="Label" type="Label" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 36.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Alpha"

[node name="HBoxContainer" type="HBoxContainer" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 358.0
margin_bottom = 16.0
alignment = 2

[node name="AlphaSliderLabel" type="Label" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "1"

[node name="HSlider" type="HSlider" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 312.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MarginContainer" type="MarginContainer" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 383.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 373.0
margin_bottom = 44.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Button" type="Button" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
margin_right = 171.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Apply"

[node name="Button2" type="Button" parent="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
margin_left = 191.0
margin_right = 363.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Don't Apply"

[connection signal="color_changed" from="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer3/AlphaButton" to="." method="_on_AlphaButton_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer2/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/DontApplyButton" to="." method="_on_DontApplyButton_pressed"]
[connection signal="value_changed" from="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AlphaValuePopup/ColorRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
